fixed spacing

--- a/css/systems.css
+++ b/css/systems.css
@@ -41,7 +41,8 @@ p { color: black; }
 
 
 .main-container {
-    margin: 16px auto;
+    max-width: 1106px;
+    margin: 0 auto;
     padding: 0 4%;
     width: 90%;
     }
